Kører nu direkte på DAWA API

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <div id="legende">
                 <h2>Signaturforklaring</h2>
                 <div class="legendElement">
-                    <img src="https://admin.slagelse.dk/media/zjgl0n3f/adresse.svg" alt="Grøn marker">
+                    <img src="https://raw.githubusercontent.com/danielarnason/valgsteder/master/adresse.svg" alt="Grøn marker">
                     <p id="adresse">Adresse</p>
                 </div>
                 <div class="legendElement">
-                    <img src="https://admin.slagelse.dk/media/rpwba3if/valgsted.svg" alt="Grøn marker">
+                    <img src="https://raw.githubusercontent.com/danielarnason/valgsteder/master/valgsted.svg" alt="Blå marker">
                     <p id="valgsted">Valgsted</p>
                 </div>
             </div>
